# disclosure-check

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  build-test.sh  check.py  dev-requirements.txt  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql.yml  scorecards.yml
disclosurecheck/: __init__.py  check.py  main.py  utils.py
disclosurecheck/collectors/: debian.py  fallback.py  github.py  ibb.py  librariesio.py  npm.py  nuget.py  overrides.py  packagecontent.py  pypi.py  securityinsights.py  tidelift.py
disclosurecheck/metadata/: librariesio.py  packagecontent.py  securityinsights.py  tidelift.py
disclosurecheck/overrides/debian/: _.json
disclosurecheck/overrides/gem/: rails.json
disclosurecheck/overrides/github/: abpframework.json  ansible.json  apache.json  aspnet.json  azure.json  crate.json  dotnet.json  google.json  microsoft.json  xamarin.json
disclosurecheck/overrides/github/mirror/: make.json
disclosurecheck/packagemanagers/: github.py  npm.py  nuget.py  pypi.py
disclosurecheck/util/: context.py  normalize.py  searchers.py
tests/: test_clean_url.py
tests/disclosurecheck/: test_clean_url.py  test_end_to_end.py  test_sanitize_github_url.py
tests/disclosurecheck/data/end_to_end/: cargo_pcre.test  cran_foreach.test  github_ckeditor_ckeditor4.test  npm_left-pad.test  npm_path-browserify.test  npm_postcss-value-parser.test  pypi_requests.test
