[project]
name = "disclosurecheck"
version = "0.0.1"
authors = [
  { name="Michael Scovetta", email="michael.scovetta@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/scovetta/disclosure-check"
"Bug Tracker" = "https://github.com/scovetta/disclosure-check/issues"